[package]
name = "bessel_rust"
version = "0.1.0"
authors = ["Eric Berquist <eric.berquist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
GSL = "*"
num = "*"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "bessel_bench"
harness = false
